--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,13 +12,14 @@
  *
  *= require_self
  //= require bootstrap.min
- //= require animate.css
- //= require style
+ //= require animate
+ //= require main_template_inspina
+ //= require shared/shared
  */
 
 
-  // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
-  @import "bootstrap-sprockets";
+// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+@import "bootstrap-sprockets";
 
 //Bootstrap is overwriting style.css when called from the gem. Maybe find a way to have style called last
 //  @import "bootstrap";
@@ -26,18 +27,18 @@
 @import "font-awesome";
 
 
-  //Site wide styles
+//////// Styles limited to the main app \\\\\\\\\\
 
-  .green {
-    color: green;
+.green {
+  color: green;
+}
+
+
+.ibox-content {
+  .post {
+    width: 90%;
   }
-
-
-  .ibox-content {
-    .post {
-      width: 90%;
-    }
-  }
+}
 
 
   .post {
