--- a/app/assets/stylesheets/landing_page/landing_page.css.scss
+++ b/app/assets/stylesheets/landing_page/landing_page.css.scss
@@ -3,18 +3,20 @@
  * Note that 'landing_page/landing_page.css' has been added to Rails.application.config.assets.precompile in assets.rb
  *
  *= require_self
- //= require landing_page/template
- //= require landing_page/custom
+ //= require landing_page/landing_template_start
+ //= require ..shared/shared
  */
 
-//Bootstrap does't seem to be used or needed. template.css has overidden bootstrap classes.
-//Uncomment next line if need original bootstrap classes.
-//@import "bootstrap";
+// landing_template_start.css has overidden bootstrap classes.
+// Uncomment next line if need original bootstrap classes.
+// @import "bootstrap";
 
 
-//Doesn't work when called from folder. Needs to call gem if needed.
-@import "font-awesome";
-/*@import "bootstrap_ace_dashboard_theme/uncompressed/font-awesome.css";*/
+//////// Styles limited to the landing page \\\\\\\\\\
 
-
+.main_content {
+  background-color: rgba(255,255,255,0.75);
+  border-radius: 5px;
+  min-height: 300px;
+}
 
