--- a/app/assets/stylesheets/shared/shared.css
+++ b/app/assets/stylesheets/shared/shared.css
@@ -1,4 +1,4 @@
-/*Add any extra styles here that don't belong in the template.css file*/
+/* Styles that are shared by the landing page and main app*/
 
 /******** Misc ********/
 .no-lines {
@@ -25,6 +25,23 @@
   text-align: left !important;
 }
 
+.beta {
+  width: 75px;
+}
+
+.d-btn-lg {
+  height: 45px !important;
+  font-size: 20px !important;
+}
+
+.label-large {
+  font-size: 20px;
+  padding: 0 10px;
+}
+
+.width100 {
+  width: 100px !important;
+}
 
 /******** errors ********/
 .field_with_errors {
@@ -49,6 +66,10 @@
 
 .blue {
   color: blue !important;
+}
+
+.green {
+  color: green;
 }
 
 
@@ -203,13 +224,41 @@
 
 /******** Padding ********/
 
+.pt10 {
+  padding-top: 10px;
+}
+
+.pt50 {
+  padding-top: 50px;
+}
+
+.pt100 {
+  padding-top: 100px;
+}
+
 .pb0 {
   padding-bottom: 0px;
 }
+
+.pb10 {
+  padding-bottom: 10px;
+}
+
 .pl5 {
   padding-left: 5px;
 }
 
+.pb20 {
+  padding-bottom: 20px;
+}
+
+.pb30 {
+  padding-bottom: 30px;
+}
+
+.pb40 {
+  padding-bottom: 40px;
+}
 .pl10 {
   padding-left: 10px;
 }
