--- a/app/views/registrations/_registration_header.html.haml
+++ b/app/views/registrations/_registration_header.html.haml
@@ -6,7 +6,7 @@
         %i.fa.fa-bars
       %h1.navbar-brand
         %a{:style => "font-size: 35px", :href => "/"}
-          Snaplr
+          LaunchIt
     #navbar-collapse-1.collapse.navbar-collapse
       %ul#navigation.nav.navbar-nav.navbar-right
         %li.active
