--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,9 +11,9 @@
  * file per style scope.
  *
  *= require_self
- //= require bootstrap.min
- //= require animate
- //= require main_template_inspina
+ //= require templates/bootstrap.min
+ //= require templates/animate
+ //= require templates/main_template_inspina
  //= require shared/shared
  */
 
