--- a/app/views/landing_pages/landing.html.haml
+++ b/app/views/landing_pages/landing.html.haml
@@ -1,24 +1,9 @@
 %body
   #page
     %header#header.site-header
-      %nav#navbar.site-navbar.navbar.navbar-static-top{:role => "navigation"}
-        .container
-          .navbar-header
-            %button.navbar-toggle{"data-target" => "#navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
-              %span.sr-only Toggle navigation
-              %i.fa.fa-bars
-            %h1.navbar-brand
-              %a{:style => "font-size: 35px", :href => "#"}
-                LaunchIt
+      = render "header"
 
-          #navbar-collapse-1.collapse.navbar-collapse
-            %ul#navigation.nav.navbar-nav.navbar-right
-              %li.active
-                %a.current{:href => "#header"} Home
-              %li
-                %a.external{href: "/signup"} Sign Up
-              %li
-                %a.external{href: "/signin"} Sign In
+
     %main#main.site-main
       %section#carousel-1.carousel.slide.section-slide{"data-ride" => "carousel"}
         .carousel-inner
@@ -29,32 +14,22 @@
                   %span Welcome to LaunchIt
                 %h2
                   You're going to be famous
-
+                .mt20
+                  %span.mr40.fa.fa-bolt.fa-5x
+                  %span.mr40.fa.fa-cloud.fa-5x
+                  %span.fa.fa-code.fa-5x
 
       %section.section.section-center.section-cta.pt10.pb20
         .container
-          .div{style:"height:20px"}
 
-    %footer#footer.site-footer
-      .container
-        #sidebar-footer-1
-          .row
-            %aside.widget.col-md-4.col-md-push-4
-              %h5.widget-title Contact us
-              %p
-                Tell us what you think or connect with us at
-                %a{:href => "mailto:david@littlecatcatering.com?Subject=Little Cat Labs"} david@ladowitz.com.com
-        .copyright
-          %p
-            © 2015 Dustinious
-            %br/
-  .scroll-to-top{"data-offset-top" => "200", "data-spy" => "affix"}
-    %a.smooth-scroll{:href => "#page"}
-      %i.fa.fa-arrow-up
-  / TODO Move to JS manifest
-  %script{:src => "https://code.jquery.com/jquery-1.10.2.min.js", :type => "text/javascript"}
-  %script{:src => "assets/landing_page/bootstrap-3.1.1.min.js", :type => "text/javascript"}
-  %script{:src => "assets/landing_page/jquery.isotope.min.js?v=1.5.26", :type => "text/javascript"}
-  %script{:src => "assets/landing_page/jquery.singlePageNav.min.js", :type => "text/javascript"}
-  %script{:src => "assets/landing_page/main.js", :type => "text/javascript"}
+
+    %footer#footer.site-footer.mt100
+      = render "footer"
+
+
+  -#.scroll-to-top{"data-offset-top" => "200", "data-spy" => "affix"}
+  -#  %a.smooth-scroll{:href => "#page"}
+  -#    %i.fa.fa-arrow-up
+
+
 
