--- a/app/views/layouts/landing_page/landing_layout.html.haml
+++ b/app/views/layouts/landing_page/landing_layout.html.haml
@@ -2,7 +2,8 @@
 %html(lang="en-US")
   %head
     %title Little Cat Labs
-    = stylesheet_link_tag 'landing_page/landing_page', media: 'all', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'landing_page/landing_page', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'landing_page/landing_page', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
   %body
@@ -13,5 +14,3 @@
           = message
 
     = yield
-
-
