--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,12 +2,12 @@
 
 #page
   %header#header.site-header
-    = render "registrations/registration_header"
+    = render "landing_pages/header"
 
   %main#main.site-main
     .container
       .row
-        .col-md-6.col-md-offset-3
+        .col-xs-4.col-xs-offset-4
           %h1 Sign Up
 
           -#error div
@@ -37,8 +37,10 @@
               = f.submit "Sign Up", class: "btn btn-success"
 
       .row.mt50
-        .col-md-6.col-md-offset-3.text-left
+        .col-xs-4.col-xs-offset-4.text-left
           %i.fa.fa-envelope.mr10
           We promise never do anything uncool with your info
+      -#TODO strange issue with different versions of bootstrap or theme being used for btn-large on render vs redirect
 
-  -#TODO strange issue with different versions of bootstrap or theme being used for btn-large on render vs redirect
+  %footer#footer.site-footer.mt100
+    = render "landing_pages/footer"
