--- a/app/assets/stylesheets/shared/shared.css
+++ b/app/assets/stylesheets/shared/shared.css
@@ -118,6 +118,14 @@
   margin-top: 100px;
 }
 
+.mt200 {
+  margin-top: 200px;
+}
+
+.mt300 {
+  margin-top: 300px;
+}
+
 .ml5 {
   margin-left: 5px;
 }
