adding user edit and update

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,4 +1,6 @@
 .footer
-  %div
+  .pull-left
     %strong Copyright
-    Dustinious © 2014-2015
+    LaunchIt © 2014-2015
+  .pull-right
+    = link_to "Contact Us", "#"
