--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,12 +1,23 @@
 .row
-  .col-lg-8
+  .col-lg-10
     .ibox.float-e-margins
       .ibox-title
         %h3
-          Here is what people you are following are saying
+          Here is all your relevant info
       .ibox-content
         .row
+          = link_to "Update Account", edit_user_path(@user), class: "btn btn-primary ml10"
+
           .posts.m-t-lg
             .no-posts.m-l-lg
-              %h4= link_to "See all users", users_path
+              = image_tag "http://www.eonline.com/eol_images/Entire_Site/201478/rs_500x281-140808102730-cutest-cat-gifs-please.gif",
+                class: "col-sm-6 mt30"
 
+              = image_tag "http://31.media.tumblr.com/323247f4fdf2cc14831bb7980bb432af/tumblr_njy5ihohLL1re3kvuo1_400.gif",
+                class: "col-sm-6 mt30"
+
+              = image_tag "http://viralgifs.com/wp-content/uploads/2014/03/cat_did_u_forget.gif?fb43fe",
+                class: "col-sm-6 mt30"
+
+              = image_tag "http://www.myhappyoffice.com/wp-content/uploads/2012/03/cute-happy-funny-giggle-cat-5.gif",
+                class: "col-sm-6 mt30"
