--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -7,18 +7,12 @@
   %main#main.site-main
     .container
       .row
+        .col-sm-4.col-sm-offset-4
+          -#validates errors div
+          = render "layouts/validation_errors", :model => @user
+
         .col-xs-4.col-xs-offset-4
           %h1 Sign Up
-
-          -#error div
-          - if @user.errors.any?
-            #error_explanation
-              %h2
-                Whooaa tiger, something has gone wrong.
-
-              %ul
-                - @user.errors.full_messages.each do |msg|
-                  %li= msg
 
           = form_for @user do |f|
             .form-group
