--- a/app/views/landing_pages/_header.html.haml
+++ b/app/views/landing_pages/_header.html.haml
@@ -5,7 +5,7 @@
         %span.sr-only Toggle navigation
         %i.fa.fa-bars
       %h1.navbar-brand
-        %a{:style => "font-size: 35px", :href => "#"}
+        %a{:style => "font-size: 35px", :href => "/"}
           LaunchIt
 
     #navbar-collapse-1.collapse.navbar-collapse
