getting founders index page working

--- a/app/views/landing_pages/landing.html.haml
+++ b/app/views/landing_pages/landing.html.haml
@@ -1,7 +1,7 @@
 %main#main.site-main
   %section#carousel-1.carousel.slide.section-slide{"data-ride" => "carousel"}
     .carousel-inner
-      .item.active{:style => "background: url(assets/background/dusty_wide_dark_2.jpg);"}
+      .item.active{:style => "background: url(assets/background/dusty_wide_dark_2.jpg)"}
         .container
           .main_content.pt10.pb40.col-sm-8.col-sm-offset-2
             %h1.section-title
