--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -4,8 +4,13 @@
       .item.active{:style => "background: url(https://farm3.staticflickr.com/2871/10093714286_c3925502f0_o.jpg); background-size: cover; background-repeat: no-repeat"}
         .container
           .main_content.pt10.pb40.col-sm-8.col-sm-offset-2
-            %h1.section-title
-              %span All the founders go here
+            .section-title
+              - @founders.each do |founder|
+                .col-sm-4
+                  .panel.panel-primary
+                    .panel-heading
+                      %h3.panel-title= founder.name
+                    .panel-body= founder.quote
 
 
   %section.section.section-center.section-cta.pt10.pb20
