adding founders controller things

--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -1,17 +1,11 @@
-%main#main.site-main
-  %section#carousel-1.carousel.slide.section-slide{"data-ride" => "carousel"}
-    .carousel-inner
-      .item.active{:style => "background: url(https://farm3.staticflickr.com/2871/10093714286_c3925502f0_o.jpg); background-size: cover; background-repeat: no-repeat"}
-        .container
-          .main_content.pt10.pb40.col-sm-8.col-sm-offset-2
-            .section-title
-              - @founders.each do |founder|
-                .col-sm-4
-                  .panel.panel-primary
-                    .panel-heading
-                      %h3.panel-title= founder.name
-                    .panel-body= founder.quote
+.section-title
+  - @founders.each do |founder|
+    .col-sm-4
+      .panel.panel-primary
+        .panel-heading
+          %h3.panel-title= founder.name
+        .panel-body= founder.quote
 
-
-  %section.section.section-center.section-cta.pt10.pb20
-    .container
+.row
+  .col-sm-12.mt100
+    = link_to "Add A Founder", new_founder_path, class: "btn btn-primary"
