--- a/app/views/layouts/guest_pages/guest_layout.html.haml
+++ b/app/views/layouts/guest_pages/guest_layout.html.haml
@@ -16,7 +16,13 @@
       %header#header.site-header
         = render "layouts/guest_pages/header"
 
-      = yield
+      %main#main.site-main
+        %section#carousel-1.carousel.slide.section-slide{"data-ride" => "carousel"}
+          .carousel-inner
+            .item.active{:style => "background: url(https://farm3.staticflickr.com/2871/10093714286_c3925502f0_o.jpg); background-size: cover; background-repeat: no-repeat"}
+              .container
+                .main_content.pt10.pb40.col-sm-8.col-sm-offset-2
+                  = yield
 
       %footer#footer.site-footer.mt100
         = render "layouts/guest_pages/footer"
