--- a/app/views/founders/new.html.haml
+++ b/app/views/founders/new.html.haml
@@ -1,1 +1,9 @@
-Create a founder
+.section-title
+  %h1 Create a founder
+
+.col-sm-6.col-sm-offset-3
+  = simple_form_for(@founder, html: {class: 'form-horizontal' }) do |f|
+    = f.input :name
+    = f.input :image_url
+    = f.input :quote
+    = f.button :submit, class: "btn btn-success"
