--- a/app/views/founders/show.html.haml
+++ b/app/views/founders/show.html.haml
@@ -1,1 +1,6 @@
-This is a founder
+.section-title
+  .col-sm-4.col-sm-offset-4
+    .panel.panel-primary
+      .panel-heading
+        %h3.panel-title= @founder.name
+      .panel-body= @founder.quote
