--- a/app/views/landing_pages/landing.html.haml
+++ b/app/views/landing_pages/landing.html.haml
@@ -5,7 +5,7 @@
         .container
           .main_content.pt10.pb40.col-sm-8.col-sm-offset-2
             %h1.section-title
-              %span Welcome to LaunchIt
+              %span Welcome to Founder Traits
             %h2
               You're going to be famous
             .mt20
