--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,6 @@
 .footer
   .pull-left
     %strong Copyright
-    LaunchIt © 2014-2015
+    Founder Traits © 2014-2015
   .pull-right
     = link_to "Contact Us", "#"
