--- a/app/views/layouts/guest_pages/_footer.html.haml
+++ b/app/views/layouts/guest_pages/_footer.html.haml
@@ -8,5 +8,5 @@
           %a{:href => "mailto:david@ladowitz.com?Subject=Little Cat Labs"} david@ladowitz.com
   .copyright
     %p
-      © 2015 LaunchIt
+      © 2015 Founder Traits
       %br
