--- a/app/views/user_mailer/registration_email.html.haml
+++ b/app/views/user_mailer/registration_email.html.haml
@@ -21,4 +21,4 @@
 
       .panel-footer
         %h5
-        = link_to "LaunchIt", "#", class: "blue underline text-center"
+        = link_to "Founder Traits", "#", class: "blue underline text-center"
