--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -4,7 +4,7 @@
       %li.nav-header
         .dropdown.profile-element
           %h2
-            = link_to "LaunchIt", user_path(current_user)
+            = link_to "Founder Traits", user_path(current_user)
           %span
             %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
               %span.clear
