--- a/app/views/layouts/guest_pages/_header.html.haml
+++ b/app/views/layouts/guest_pages/_header.html.haml
@@ -6,7 +6,7 @@
         %i.fa.fa-bars
       %h1.navbar-brand
         %a{:style => "font-size: 35px", :href => "/"}
-          LaunchIt
+          Founder Traits
 
     #navbar-collapse-1.collapse.navbar-collapse
       %ul#navigation.nav.navbar-nav.navbar-right
