--- a/app/views/user_mailer/request_password.html.haml
+++ b/app/views/user_mailer/request_password.html.haml
@@ -18,4 +18,4 @@
 
       .panel-footer
         %h5
-        = link_to "LaunchIt", "#", class: "blue underline text-center"
+        = link_to "Founder Traits", "#", class: "blue underline text-center"
