more title changes

--- a/app/views/layouts/guest_pages/_footer.html.haml
+++ b/app/views/layouts/guest_pages/_footer.html.haml
@@ -5,7 +5,7 @@
         %h5.widget-title Contact us
         %p
           Tell us what you think or connect with us at
-          %a{:href => "mailto:david@ladowitz.com?Subject=Little Cat Labs"} david@ladowitz.com
+          %a{:href => "mailto:david@ladowitz.com?Subject=Founder Traits"} david@ladowitz.com
   .copyright
     %p
       © 2015 Founder Traits
