--- a/app/views/layouts/guest_pages/guest_layout.html.haml
+++ b/app/views/layouts/guest_pages/guest_layout.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html(lang="en-US")
   %head
-    %title Little Cat Labs
+    %title Founder Traits
     = stylesheet_link_tag    'guest_pages/guest', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'guest_pages/guest', 'data-turbolinks-track' => true
     = csrf_meta_tags
