--- a/app/views/layouts/guest_pages/guest_layout.html.haml
+++ b/app/views/layouts/guest_pages/guest_layout.html.haml
@@ -21,7 +21,7 @@
           .carousel-inner
             .item.active{:style => "background: url(https://farm3.staticflickr.com/2871/10093714286_c3925502f0_o.jpg); background-size: cover; background-repeat: no-repeat"}
               .container
-                .main_content.pt10.pb40.col-sm-8.col-sm-offset-2
+                .main_content.pt10.pb40.col-sm-12
                   = yield
 
       %footer#footer.site-footer.mt100
