--- a/app/assets/stylesheets/guest_pages/guest.css.scss
+++ b/app/assets/stylesheets/guest_pages/guest.css.scss
@@ -19,4 +19,8 @@
   background-color: rgba(255,255,255,0.75);
   border-radius: 5px;
   min-height: 300px !important;
+
+  .panel {
+    height: 275px;
+  }
 }
