--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -3,9 +3,15 @@
     .col-sm-4
       .panel.panel-primary
         .panel-heading
-          %h3.panel-title= founder.name
-        .panel-body= founder.quote
-
+          .panel-title.fsize-25= founder.name
+        .panel-body
+          - founder.traits.each do |trait|
+            %li.fsize-20= trait.name
+          %hr
+          %em
+            "
+            = founder.quote
+            "
 .row
   .col-sm-12.mt100
     = link_to "Add A Founder", new_founder_path, class: "btn btn-primary"
