--- a/app/views/founders/show.html.haml
+++ b/app/views/founders/show.html.haml
@@ -5,7 +5,7 @@
         .panel-title.fsize-25= @founder.name
       .panel-body
         - @founder.traits.each do |trait|
-          %li.fsize-20= trait.name
+          %li.fsize-20.no-bullet= trait.name
         %hr
         %em
           "
