--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -1,12 +1,12 @@
 .section-title
   - @founders.each do |founder|
-    .col-sm-4
+    .col-xs-12.col-sm-6.col-md-4
       .panel.panel-primary
         .panel-heading
           .panel-title.fsize-25= founder.name
         .panel-body
           - founder.traits.each do |trait|
-            %li.fsize-20= trait.name
+            %li.fsize-20.no-bullet.text-left= trait.name
           %hr
           %em
             "
