--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -5,13 +5,15 @@
         .panel-heading
           .panel-title.fsize-25= link_to founder.name, founder_path(founder)
         .panel-body
+          .profile{style: "background-image: url(#{founder.image_url})"}
+
           - founder.traits.each do |trait|
-            %li.fsize-20.no-bullet.text-left= trait.name
-          %hr
-          %em
-            "
-            = founder.quote
-            "
+            %li.fsize-20.no-bullet= trait.name
+        %hr
+        %em
+          "
+          = founder.quote
+          "
 .row
   .col-sm-12.mt100
     = link_to "Add A Founder", new_founder_path, class: "btn btn-primary"
