updating backgrounds and layouts

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,7 @@
 .footer
   .pull-left
     %strong Copyright
-    Founder Traits © 2014-2015
+    Founder Traits made at
+    = link_to "Tradecraft", "http://tradecrafted.com"
   .pull-right
     = link_to "Contact Us", "#"
