--- a/app/views/layouts/guest_pages/_footer.html.haml
+++ b/app/views/layouts/guest_pages/_footer.html.haml
@@ -4,9 +4,10 @@
       %aside.widget.col-md-4.col-md-push-4
         %h5.widget-title Contact us
         %p
-          Tell us what you think or connect with us at
-          %a{:href => "mailto:david@ladowitz.com?Subject=Founder Traits"} david@ladowitz.com
+          Tell us what you think
+          %a{:href => "mailto:david@tradecrafted.com?Subject=Founder Traits"} david@tradecrafted.com
   .copyright
-    %p
-      © 2015 Founder Traits
+    %h3
+      Hand made at with the finest materials at
+      = link_to "Tradecraft", "http://tradecrafted.com"
       %br
