--- a/app/views/layouts/guest_pages/guest_layout.html.haml
+++ b/app/views/layouts/guest_pages/guest_layout.html.haml
@@ -19,7 +19,7 @@
       %main#main.site-main
         %section#carousel-1.carousel.slide.section-slide{"data-ride" => "carousel"}
           .carousel-inner
-            .item.active{:style => "background: url(https://farm3.staticflickr.com/2871/10093714286_c3925502f0_o.jpg); background-size: cover; background-repeat: no-repeat"}
+            .item.active{:style => "background: url(#{@background}); background-size: cover; background-repeat: no-repeat"}
               .container
                 .main_content.pt10.pb40.col-sm-12
                   = yield
