updating footer more

--- a/app/views/layouts/guest_pages/_footer.html.haml
+++ b/app/views/layouts/guest_pages/_footer.html.haml
@@ -8,6 +8,6 @@
           %a{:href => "mailto:david@tradecrafted.com?Subject=Founder Traits"} david@tradecrafted.com
   .copyright
     %h3
-      Hand made with the finest materials at
+      Hand made from the finest materials at
       = link_to "Tradecraft", "http://tradecrafted.com"
       %br
